# deshi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  customvis.natvis  deshi.h  deshi.sln  deshi.vcxproj  deshi.vcxproj.filters  test.desh  vk_layer_settings.txt
cfg/: aliases.cfg  binds.cfg  keybinds.txt  render.cfg
configs/: keybinds.txt
data/entities/: door.entity  example.entity
data/levels/: _
data/shaders/: base.frag  (+27 more)
docs/: LICENSE.txt  Render Pipeline (11.23.2020).docx  VulkanRenderingWalkthru.txt  console_release_notes.txt  desh_FileFormat.txt
examples/: build.sh  build_all.sh
misc/: 4coder.bat  TODOP.py  build.bat  build_ctime.bat  build_delle.bat  build_shaders.bat  build_win64.bat  ctime.c  customvis.natvis  desh.bt  deshi.cap  deshi.vcxproj  deshi.vcxproj.filters  mesh.bt
saves/: savetest.txt
shaders/: build_shaders.bat  compile.bat  default.frag  default.frag.spv  default.vert  default.vert.spv  fixedimguishader.vert  fixedimguishader.vert.spv  flat.frag  flat.vert  lavalamp.frag  lavalamp.frag.spv  lavalamp.vert  lavalamp.vert.spv  pbr.frag  pbr.vert  phong.frag  phong.vert  phong.vert.spv  shader.frag  shader.vert  testing0.frag  testing0.vert  testing1.vert  twod.frag  vert.spv  wireframe.frag  wireframe.frag.spv  wireframe.vert  wireframe.vert.spv
src/: EntityAdmin.cpp  EntityAdmin.h  Model.h  core.h  defines.h  deshi.cpp  deshi.h  deshi.smproj  deshi_glfw.h  deshi_imgui.h  deshi_import.h  deshi_input.h  deshi_main.cpp  deshi_renderer.cpp  deshi_renderer.h  deshi_time.h  deshigdb.py  game.cpp  main.cpp  misc_testing.cpp
(+490 files in other folders)
